--- a/c-api/sequence.po
+++ b/c-api/sequence.po
@@ -38,7 +38,7 @@ msgstr ""
 "caso contrario. Tenga en cuenta que retorna ``1`` para las clases de Python "
 "con un método :meth:`__getitem__` a menos que sean: subclases :class:`dict` "
 "ya que en general es imposible determinar qué tipo de claves admite. Esta "
-"función siempre tiene éxito."
+"función siempre finaliza con éxito."
 
 #: ../Doc/c-api/sequence.rst:23
 msgid ""
